# AndroidCollection

./: .gitignore  README.md  build.gradle  settings.gradle
app/: .gitignore  CMakeLists.txt  build.gradle  proguard-rules.pro
app/schemes/com.coodev.androidcollection.dao.room.UserDatabase/: 1.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/: index.html  litepal.xml
app/src/main/cpp/: android_jni.cpp  map_md5.cpp  md5.cpp  native-lib.cpp  native_crash_cache.cpp
app/src/main/cpp/include/: Logger.h  md5.h
app/src/main/res/anim/: center_2_bottom.xml  page_push_bottom_in.xml  page_push_static.xml  push_bottom_out.xml  top_2_center.xml
app/src/main/res/drawable/: btn_bg_color_file_path.xml  file_path.xml  file_path_button_text_color.xml  file_path_enable.xml  file_path_hover.xml  file_path_omit.xml  label_bg.xml  label_text_color.xml  progressbar_download_style.xml  progressbar_install_style.xml  vvv.xml  webview_filechooser_background.xml  webview_filechooser_background_corner.xml
app/src/main/res/font/: font_din_bold.xml
app/src/main/res/layout/: activity_base.xml  activity_ble_client.xml  activity_blue_test.xml  activity_butterknife.xml  activity_data_binding.xml  activity_data_binding_level_two.xml  activity_data_binding_recycler_item.xml  activity_life_cycle.xml  activity_main.xml  activity_mvp.xml  activity_show_image_from_web.xml  activity_splash.xml  activity_two_way_databinding.xml  activity_web.xml  activity_x5.xml  drawer_navigation.xml  fragment_container.xml  fragment_login.xml  fragment_navigation.xml  fragment_register.xml  (+5 more)
(+611 files in other folders)
